5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1721_3067.log
== TEST (2019-05-02 18:15:09) 
-- CODE:
x = input("ESPADA OU CAUDA")
a = int(input("D1"))
b = int(input("D2"))
c = int(input("D3"))
d = int(input("D4"))
if x = "ESPADA":
	t = a+b+c+d+6
elif x = "CAUDA":
	t = (a+b+c)*d
else:
	t = Entrada invalida
print(t)
	

-- ERROR:
File "XXXX", line 6
    if x = "ESPADA":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:15:19) 
-- CODE:
x = input("ESPADA OU CAUDA")
a = int(input("D1"))
b = int(input("D2"))
c = int(input("D3"))
d = int(input("D4"))
if x == "ESPADA":
	t = a+b+c+d+6
elif x == "CAUDA":
	t = (a+b+c)*d
else:
	t = Entrada invalida
print(t)
	

-- ERROR:
File "XXXX", line 11
    t = Entrada invalida
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:15:30) 
-- CODE:
x = input("ESPADA OU CAUDA")
a = int(input("D1"))
b = int(input("D2"))
c = int(input("D3"))
d = int(input("D4"))
if x == "ESPADA":
	t = a+b+c+d+6
elif x == "CAUDA":
	t = (a+b+c)*d
else:
	t = "Entrada invalida"
print(t)
	

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:15:39) 
-- CODE:
x = input("ESPADA OU CAUDA")
a = int(input("D1"))
b = int(input("D2"))
c = int(input("D3"))
d = int(input("D4"))
if x == "ESPADA":
	t = a+b+c+d+6
elif x == "CAUDA":
	t = (a+b+c)*d
else:
	t = "Entrada invalida"
print(t)
	

-- EXECUTION TIME:
0.219383
-- TEST CASE 1:
---- input:
CAUDA
3
5
2
4
---- correct output:
40
---- user output:
40
-- TEST CASE 2:
---- input:
ESPADA
3
3
3
3
---- correct output:
36
---- user output:
18
-- TEST CASE 3:
---- input:
ESPAD
3
3
3
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:15:47) 
-- CODE:
x = input("ESPADA OU CAUDA")
a = int(input("D1"))
b = int(input("D2"))
c = int(input("D3"))
d = int(input("D4"))
if x == "ESPADA":
	t = a+b+c+d+6
elif x == "CAUDA":
	t = (a+b+c)*d
else:
	t = "Entrada invalida"
print(t)
	

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:16:48) 
-- CODE:
x = input("ESPADA OU CAUDA")
a = int(input("D1"))
b = int(input("D2"))
c = int(input("D3"))
d = int(input("D4"))
if x == "ESPADA":
	t = a+6+b+6+c+6+d+6
elif x == "CAUDA":
	t = (a+b+c)*d
else:
	t = "Entrada invalida"
print(t)
	

-- EXECUTION TIME:
0.195867
-- TEST CASE 1:
---- input:
CAUDA
3
5
2
4
---- correct output:
40
---- user output:
40
-- TEST CASE 2:
---- input:
ESPADA
3
3
3
3
---- correct output:
36
---- user output:
36
-- TEST CASE 3:
---- input:
ESPAD
3
3
3
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
